* thunar, xfce4-panel: Update Korean translation  * libxfce4menu, libxfcegui4, mousepad, squeeze, xfce4-appfinder,    xfce4-icon-theme, xfce4-mixer, xfce4-terminal, xfce4-trigger-launcher,    xfce-mcs-manager, xfce-utils: Add Latvian translation
(Old svn revision: 26104)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,11 @@
+2007-09-24  Mike Massonnet <mmassonnet@xfce.org>
+
+	* ko.po: Updated Korean translation by ByungHyun Choi
+	<byunghyun.choi@debianusers.org>
+
 2007-09-10  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Basque translation update
+	* eu.po: Basque translation update
 
 2007-09-10  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
 
