Some catalan updates
(Old svn revision: 26117)

--- a/po/ca.po
+++ b/po/ca.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-10 14:03+0200\n"
-"PO-Revision-Date: 2007-04-05 15:25+0200\n"
+"PO-Revision-Date: 2007-09-30 10:06+0200\n"
 "Last-Translator: Pau Rul.lan Ferragut <paurullan@bulma.net>\n"
 "Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
@@ -359,25 +359,23 @@ msgstr "Surt + Bloca pantalla"
 
 #: ../plugins/clock/clock-dialog.c:345
 msgid "Custom"
-msgstr ""
+msgstr "Personalitza"
 
 #: ../plugins/clock/clock-dialog.c:399
-#, fuzzy
 msgid "Display _seconds"
-msgstr "Mostra segons"
+msgstr "Mostra _segons"
 
 #: ../plugins/clock/clock-dialog.c:408
 msgid "Use 24-_hour clock"
 msgstr "Utilitza estil de 24 _hores"
 
 #: ../plugins/clock/clock-dialog.c:414
-#, fuzzy
 msgid "Sho_w AM/PM"
-msgstr "Mostra AM/PM"
+msgstr "_Mostra AM/PM"
 
 #: ../plugins/clock/clock-dialog.c:423
 msgid "True _binary clock"
-msgstr ""
+msgstr "Rellotge _binari real"
 
 #. create dialog
 #: ../plugins/clock/clock-dialog.c:465
@@ -391,16 +389,15 @@ msgstr "Analògic"
 
 #: ../plugins/clock/clock-dialog.c:491
 msgid "Binary"
-msgstr ""
+msgstr "Binari"
 
 #: ../plugins/clock/clock-dialog.c:492
 msgid "Digital"
 msgstr "Digital "
 
 #: ../plugins/clock/clock-dialog.c:493
-#, fuzzy
 msgid "LCD"
-msgstr "LED"
+msgstr "LCD"
 
 #. show frame
 #: ../plugins/clock/clock-dialog.c:498
@@ -411,7 +408,7 @@ msgstr "Mostra _marc"
 #. tooltip settings
 #: ../plugins/clock/clock-dialog.c:505
 msgid "Tooltip Format"
-msgstr ""
+msgstr "Format del rètol emergent"
 
 #. clock settings
 #: ../plugins/clock/clock-dialog.c:531
@@ -526,18 +523,16 @@ msgid "Program Launcher"
 msgstr "Programa llançadora"
 
 #: ../plugins/launcher/launcher-dialog.c:1543
-#, fuzzy
 msgid "A_rrow:"
-msgstr "B_otó fletxa"
+msgstr "Flet_xa"
 
 #: ../plugins/launcher/launcher-dialog.c:1549
 msgid "Default"
-msgstr ""
+msgstr "Predeterminat"
 
 #: ../plugins/launcher/launcher-dialog.c:1554
-#, fuzzy
 msgid "Inside Button"
-msgstr "Botó d'_icones"
+msgstr "Botó interior"
 
 #: ../plugins/pager/pager.c:336 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
@@ -561,31 +556,29 @@ msgid "Separator or Spacing"
 msgstr "Separador o espaiat"
 
 #: ../plugins/separator/separator.c:430
-#, fuzzy
 msgid "Separator Style"
-msgstr "Separador o espaiat"
+msgstr "Estil del separador"
 
 #. space
 #: ../plugins/separator/separator.c:437
 msgid "_Empty Space"
-msgstr ""
+msgstr "_Espai buit"
 
 #: ../plugins/separator/separator.c:446
 msgid "_Expanding Empty Space"
-msgstr ""
+msgstr "Expandeix els _espais buits"
 
 #: ../plugins/separator/separator.c:455
 msgid "_Line"
-msgstr ""
+msgstr "_Línea"
 
 #: ../plugins/separator/separator.c:464
-#, fuzzy
 msgid "_Handle"
-msgstr "Gestor:"
+msgstr "_Gestiona"
 
 #: ../plugins/separator/separator.c:473
 msgid "_Dots"
-msgstr ""
+msgstr "_Punts"
 
 #: ../plugins/showdesktop/showdesktop.c:32
 msgid "Restore hidden windows"
@@ -609,14 +602,13 @@ msgstr "Ja hi ha una safata del sistema executant-se a la pantalla"
 
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:287
-#, fuzzy
 msgid "Hidden Applications"
-msgstr "Seleccioneu una aplicació"
+msgstr "Aplicacions amagades"
 
 #: ../plugins/systray/xfce-tray-manager.c:431
 #, c-format
 msgid "Failed to acquire manager selection for screen %d"
-msgstr ""
+msgstr "No s’ha pogut controlar el gestor de selecció per la pantalla %d"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:157
 #: ../plugins/tasklist/tasklist-dialogs.c:224
@@ -802,15 +794,3 @@ msgstr "Mostra el llistat de les finestres disponibles"
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
 msgstr "Gestor de quadres Xfce4"
-
-#~ msgid "Unable to register system tray: %s"
-#~ msgstr "No es pot registrar la safata del sistema: %s"
-
-#~ msgid "%A %d %B %Y"
-#~ msgstr "%A %d %B %Y"
-
-#~ msgid "_Draw Separator"
-#~ msgstr "_Dibuixa Separador"
-
-#~ msgid "_Expand"
-#~ msgstr "_Expandeix"
