--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-30  Pau Rul-lan Ferragut <paurullan@bulma.net>
+
+	* ca.po: Update Catalan translation
+
 2007-09-24  Mike Massonnet <mmassonnet@xfce.org>
 
 	* ko.po: Updated Korean translation by ByungHyun Choi
