* libxfcegui4, xfce4-panel, xfwm4, xarchiver, xfcalendar: Update german   translation.
(Old svn revision: 26121)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-01  Mike Massonnet <mmassonnet@xfce.org>
+
+	* de.po: Update translation by Nico Schümann
+	<nico.schuemann@googlemail.com>
+
 2007-09-30  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* ca.po: Update Catalan translation
