--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-10 14:03+0200\n"
-"PO-Revision-Date: 2007-01-04 00:27+0100\n"
+"PO-Revision-Date: 2007-10-01 15:38+0100\n"
 "Last-Translator: Nico Schümann <nico@prog.nico22.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -362,25 +362,23 @@ msgstr "Abmelden + Bildschirm sperren"
 
 #: ../plugins/clock/clock-dialog.c:345
 msgid "Custom"
-msgstr ""
+msgstr "Benutzerdefiniert"
 
 #: ../plugins/clock/clock-dialog.c:399
-#, fuzzy
 msgid "Display _seconds"
-msgstr "Sekunden anzeigen"
+msgstr "_Sekunden anzeigen"
 
 #: ../plugins/clock/clock-dialog.c:408
 msgid "Use 24-_hour clock"
 msgstr "24-_Stunden Uhr verwenden"
 
 #: ../plugins/clock/clock-dialog.c:414
-#, fuzzy
 msgid "Sho_w AM/PM"
-msgstr "AM/PM anzeigen"
+msgstr "AM/PM an_zeigen"
 
 #: ../plugins/clock/clock-dialog.c:423
 msgid "True _binary clock"
-msgstr ""
+msgstr "Richtige _Binäruhr"
 
 #. create dialog
 #: ../plugins/clock/clock-dialog.c:465
@@ -394,14 +392,13 @@ msgstr "Analog"
 
 #: ../plugins/clock/clock-dialog.c:491
 msgid "Binary"
-msgstr ""
+msgstr "Binär"
 
 #: ../plugins/clock/clock-dialog.c:492
 msgid "Digital"
 msgstr "Digital"
 
 #: ../plugins/clock/clock-dialog.c:493
-#, fuzzy
 msgid "LCD"
 msgstr "LED"
 
@@ -414,7 +411,7 @@ msgstr "_Rahmen anzeigen"
 #. tooltip settings
 #: ../plugins/clock/clock-dialog.c:505
 msgid "Tooltip Format"
-msgstr ""
+msgstr "Format der Tooltipps"
 
 #. clock settings
 #: ../plugins/clock/clock-dialog.c:531
@@ -529,7 +526,6 @@ msgid "Program Launcher"
 msgstr "Programmstarter"
 
 #: ../plugins/launcher/launcher-dialog.c:1543
-#, fuzzy
 msgid "A_rrow:"
 msgstr "_Pfeilknopf"
 
@@ -538,9 +534,8 @@ msgid "Default"
 msgstr "Standard"
 
 #: ../plugins/launcher/launcher-dialog.c:1554
-#, fuzzy
 msgid "Inside Button"
-msgstr "_Symbolknopf"
+msgstr "Im Knopf"
 
 #: ../plugins/pager/pager.c:336 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
@@ -564,31 +559,29 @@ msgid "Separator or Spacing"
 msgstr "Trennlinie oder Abstand"
 
 #: ../plugins/separator/separator.c:430
-#, fuzzy
 msgid "Separator Style"
-msgstr "Trennlinie oder Abstand"
+msgstr "Trennlinie"
 
 #. space
 #: ../plugins/separator/separator.c:437
 msgid "_Empty Space"
-msgstr ""
+msgstr "_Leerzeichen"
 
 #: ../plugins/separator/separator.c:446
 msgid "_Expanding Empty Space"
-msgstr ""
+msgstr "_Erweiternde Leerzeichen"
 
 #: ../plugins/separator/separator.c:455
 msgid "_Line"
-msgstr ""
+msgstr "_Linie"
 
 #: ../plugins/separator/separator.c:464
-#, fuzzy
 msgid "_Handle"
-msgstr "Position:"
+msgstr "R_outine"
 
 #: ../plugins/separator/separator.c:473
 msgid "_Dots"
-msgstr ""
+msgstr "_Punkte"
 
 #: ../plugins/showdesktop/showdesktop.c:32
 msgid "Restore hidden windows"
@@ -612,14 +605,13 @@ msgstr "Es läuft bereits eine Systemleiste auf diesem Bildschirm"
 
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:287
-#, fuzzy
 msgid "Hidden Applications"
-msgstr "Anwendung auswählen:"
+msgstr "Versteckte Anwendungen"
 
 #: ../plugins/systray/xfce-tray-manager.c:431
 #, c-format
 msgid "Failed to acquire manager selection for screen %d"
-msgstr ""
+msgstr "Konnte Manager-Auswahl für Bildschirm %d nicht erfragen."
 
 #: ../plugins/tasklist/tasklist-dialogs.c:157
 #: ../plugins/tasklist/tasklist-dialogs.c:224
