--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-06  Mike Massonnet <mmassonnet@xfce.org>
+
+	* lv.po: Add translations by RPrieditis <RPrieditis@inbox.lv>
+
 2007-10-01  Mike Massonnet <mmassonnet@xfce.org>
 
 	* de.po: Update translation by Nico Schümann
